# fastapi-docker-poetry

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  pyproject.toml
