[tool.poetry]
name = "fastapi_app"
version = "0.1.0"
description = "Aplicação FastAPI com Docker e Poetry"
authors = ["Andre <andre@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-fastapi_app = "poetry.core.masonry.api"
